x86/include/TestEngine.h


TESTENGINE_API(int32) psWriteBdAddr(uint32 handle, uint32 lap, uint32 uap, uint32 nap);
TESTENGINE_API(int32) psReadModuleId(uint32 handle, uint32* moduleId);
TESTENGINE_API(int32) psReadXtalFtrim(uint32 handle, uint16* fTrim);
TESTENGINE_API(int32) psWriteXtalFtrim(uint32 handle, uint16 fTrim);
TESTENGINE_API(int32) psReadXtalOffset(uint32 handle, int16* offset);
TESTENGINE_API(int32) psWriteXtalOffset(uint32 handle, int16 offset);
TESTENGINE_API(int32) psWriteModuleSecurityCode(uint32 handle, const uint16 code[]);
TESTENGINE_API(int32) psWriteModuleId(uint32 handle, uint32 moduleId);
TESTENGINE_API(int32) psWriteBaudrate(uint32 handle, uint16 value);
TESTENGINE_API(int32) psWriteRadiotestFirstTrimTime(uint32 handle, uint32 time);
TESTENGINE_API(int32) psReadRadiotestFirstTrimTime(uint32 handle, uint32* time);
TESTENGINE_API(int32) psWriteRadiotestLoLvlTrimEnable(uint32 handle, uint16 state);
TESTENGINE_API(int32) psReadRadiotestLoLvlTrimEnable(uint32 handle, uint16* state);
TESTENGINE_API(int32) psWriteRadiotestSubsequentTrimTime(uint32 handle, uint32 time);
TESTENGINE_API(int32) psReadRadiotestSubsequentTrimTime(uint32 handle, uint32* time);
TESTENGINE_API(int32) psWriteHostInterface(uint32 handle, uint16 transport);
TESTENGINE_API(int32) psReadHostInterface(uint32 handle, uint16* transport);
TESTENGINE_API(int32) psWriteUsbAttributes(uint32 handle, uint16 bmAttributes);
TESTENGINE_API(int32) psWriteDPlusPullup(uint32 handle, uint16 pioPin);
TESTENGINE_API(int32) psWriteUsbMaxPower(uint32 handle, uint16 maxPower);
TESTENGINE_API(int32) psWritePioProtectMask(uint32 handle, uint16 mask);
TESTENGINE_API(int32) psReadPioProtectMask(uint32 handle, uint16* mask);
TESTENGINE_API(int32) psWriteTxOffsetHalfMhz(uint32 handle, int16 offset);
TESTENGINE_API(int32) psReadTxOffsetHalfMhz(uint32 handle, int16* offset);
TESTENGINE_API(int32) psWriteUsrValue(uint32 handle, uint16 userNo, uint16 length,
                                      const uint16 data[]);
TESTENGINE_API(int32) psReadUsrValue(uint32 handle, uint16 userNo, uint16 maxLen,
                                     uint16* length, uint16 data[]);
TESTENGINE_API(int32) psWritePowerTable(uint32 handle, uint16 numEntries,
                                        const uint8 intPA[] , const uint8 extPA[],
                                        const int32 power[]);
TESTENGINE_API(int32) psReadPowerTable(uint32 handle, int32 maxSize,
                                       int32* numEntries, uint8 intPA[],
                                       uint8 extPA[], int32 power[]);
TESTENGINE_API(int32) psWriteVmDisable(uint32 handle, uint8 vmDisable);
TESTENGINE_API(int32) psReadVmDisable(uint32 handle, uint8* vmDisable);
TESTENGINE_API(int32) psMergeFromFile(uint32 handle, const char* filePath);
TESTENGINE_API(int32) hciSlave(uint32 handle);
TESTENGINE_API(int32) hciSetAfhHostChannelClass(uint32 handle, const uint8 cClass[]);
TESTENGINE_API(int32) hciReadAfhChannelMap(uint32 handle, uint16 aclHandle,
                                           uint8* mode, uint8 cMap[]);
TESTENGINE_API(int32) hciSetEventFilterAutoacceptConnection(uint32 handle);
TESTENGINE_API(int32) hciWriteInquiryScanActivity(uint32 handle, uint16 interval,
                                                  uint16 window);
TESTENGINE_API(int32) hciWritePageScanActivity(uint32 handle, uint16 interval,
                                               uint16 window);
TESTENGINE_API(int32) hciWriteScanEnable(uint32 handle, uint8 scanEnable);
TESTENGINE_API(int32) hciInquiry(uint32 handle, uint8 inquiryLength,
                                 uint8 numResponses, uint32 lap);
TESTENGINE_API(int32) hciGetInquiryResults(uint32 handle, uint32 lap[], uint8 uap[],
                                           uint16 nap[], uint16 clockOffset[],
                                           uint32 maxLen, uint32* dataLen);
TESTENGINE_API(int32) hciInquiryCancel(uint32 handle);
TESTENGINE_API(int32) hciCreateConnection(uint32 handle, uint32 lap, uint8 uap,
                                          uint16 nap, uint16 pktType,
                                          uint16* connectionHandle);
TESTENGINE_API(int32) hciCreateConnectionNoInquiry(uint32 handle, uint32 lap, uint8 uap,
                                                   uint16 nap, uint16 pktType,
                                                   uint8 pageScanRepMode,
                                                   uint8 pageScanMode,
                                                   uint16 clockOffset,
                                                   uint8 allowRoleSwitch,
                                                   uint16* connectionHandle);
TESTENGINE_API(int32) hciCreateScoConnection(uint32 handle, uint16 aclConnectionHandle,
                                             uint16 pktType,
                                             uint16* scoConnectionHandle);
TESTENGINE_API(int32) hciSetupScoConnection(uint32 handle, uint16 aclConnectionHandle,
                                            uint32 txBandwidth, uint32 rxBandwidth,
                                            uint16 maxLatency, uint16 voiceSetting,
                                            uint8 retransEffort, uint16 pktType,
                                            uint16* scoConnectionHandle);
TESTENGINE_API(int32) hciReadVoiceSetting(uint32 handle, uint16* voiceSetting);
TESTENGINE_API(int32) hciWriteVoiceSetting(uint32 handle, uint16 voiceSetting);
TESTENGINE_API(int32) hciWriteLinkPolicySettings(uint32 handle,
                                                 uint16 connectionHandle,
                                                 uint16 linkPolicySettings);