x86/include/TestEngineAPI.cs


        [DllImport("TestEngine.dll", EntryPoint="psWriteBdAddr",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteBdAddr(uint handle, uint lap, uint uap, uint nap);

        [DllImport("TestEngine.dll", EntryPoint="psReadModuleId",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadModuleId(uint handle, out uint moduleId);

        [DllImport("TestEngine.dll", EntryPoint="psReadXtalFtrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadXtalFtrim(uint handle, out ushort fTrim);

        [DllImport("TestEngine.dll", EntryPoint="psWriteXtalFtrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteXtalFtrim(uint handle, ushort fTrim);

        [DllImport("TestEngine.dll", EntryPoint="psReadXtalOffset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadXtalOffset(uint handle, out short offset);

        [DllImport("TestEngine.dll", EntryPoint="psWriteXtalOffset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteXtalOffset(uint handle, short offset);

        [DllImport("TestEngine.dll", EntryPoint="psWriteModuleSecurityCode",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteModuleSecurityCode(uint handle, ushort [] code);

        [DllImport("TestEngine.dll", EntryPoint="psWriteModuleId",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteModuleId(uint handle, uint moduleId);

        [DllImport("TestEngine.dll", EntryPoint="psWriteBaudrate",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteBaudrate(uint handle, ushort value);

        [DllImport("TestEngine.dll", EntryPoint="psWriteRadiotestFirstTrimTime",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteRadiotestFirstTrimTime(uint handle, uint time);

        [DllImport("TestEngine.dll", EntryPoint="psReadRadiotestFirstTrimTime",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadRadiotestFirstTrimTime(uint handle, out uint time);

        [DllImport("TestEngine.dll", EntryPoint="psWriteRadiotestLoLvlTrimEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteRadiotestLoLvlTrimEnable(uint handle, ushort state);

        [DllImport("TestEngine.dll", EntryPoint="psReadRadiotestLoLvlTrimEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadRadiotestLoLvlTrimEnable(uint handle, out ushort state);

        [DllImport("TestEngine.dll", EntryPoint="psWriteRadiotestSubsequentTrimTime",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteRadiotestSubsequentTrimTime(uint handle, uint time);

        [DllImport("TestEngine.dll", EntryPoint="psReadRadiotestSubsequentTrimTime",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadRadiotestSubsequentTrimTime(uint handle, out uint time);

        [DllImport("TestEngine.dll", EntryPoint="psWriteHostInterface",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteHostInterface(uint handle, ushort transport);

        [DllImport("TestEngine.dll", EntryPoint="psReadHostInterface",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadHostInterface(uint handle, out ushort transport);

        [DllImport("TestEngine.dll", EntryPoint="psWriteUsbAttributes",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteUsbAttributes(uint handle, ushort bmAttributes);

        [DllImport("TestEngine.dll", EntryPoint="psWriteDPlusPullup",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteDPlusPullup(uint handle, ushort pioPin);

        [DllImport("TestEngine.dll", EntryPoint="psWriteUsbMaxPower",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteUsbMaxPower(uint handle, ushort maxPower);

        [DllImport("TestEngine.dll", EntryPoint="psWritePioProtectMask",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWritePioProtectMask(uint handle, ushort mask);

        [DllImport("TestEngine.dll", EntryPoint="psReadPioProtectMask",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadPioProtectMask(uint handle, out ushort mask);

        [DllImport("TestEngine.dll", EntryPoint="psWriteTxOffsetHalfMhz",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteTxOffsetHalfMhz(uint handle, short offset);

        [DllImport("TestEngine.dll", EntryPoint="psReadTxOffsetHalfMhz",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadTxOffsetHalfMhz(uint handle, out short offset);

        [DllImport("TestEngine.dll", EntryPoint="psWriteUsrValue",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteUsrValue(uint handle, ushort userNo, ushort length, ushort [] data);

        [DllImport("TestEngine.dll", EntryPoint="psReadUsrValue",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadUsrValue(uint handle, ushort userNo, ushort maxLen, out ushort length, ushort [] data);

        [DllImport("TestEngine.dll", EntryPoint="psWritePowerTable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWritePowerTable(uint handle, ushort numEntries, byte [] intPA, byte [] extPA, int [] power);

        [DllImport("TestEngine.dll", EntryPoint="psReadPowerTable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadPowerTable(uint handle, int maxSize, out int numEntries, byte [] intPA, byte [] extPA, int [] power);

        [DllImport("TestEngine.dll", EntryPoint="psWriteVmDisable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psWriteVmDisable(uint handle, byte vmDisable);

        [DllImport("TestEngine.dll", EntryPoint="psReadVmDisable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psReadVmDisable(uint handle, out byte vmDisable);

        [DllImport("TestEngine.dll", EntryPoint="psMergeFromFile",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int psMergeFromFile(uint handle, String filePath);

        [DllImport("TestEngine.dll", EntryPoint="hciSlave",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSlave(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hciSetAfhHostChannelClass",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSetAfhHostChannelClass(uint handle, byte [] cClass);

        [DllImport("TestEngine.dll", EntryPoint="hciReadAfhChannelMap",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReadAfhChannelMap(uint handle, ushort aclHandle, out byte mode, byte [] cMap);

        [DllImport("TestEngine.dll", EntryPoint="hciSetEventFilterAutoacceptConnection",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSetEventFilterAutoacceptConnection(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hciWriteInquiryScanActivity",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWriteInquiryScanActivity(uint handle, ushort interval, ushort window);

        [DllImport("TestEngine.dll", EntryPoint="hciWritePageScanActivity",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWritePageScanActivity(uint handle, ushort interval, ushort window);

        [DllImport("TestEngine.dll", EntryPoint="hciWriteScanEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWriteScanEnable(uint handle, byte scanEnable);

        [DllImport("TestEngine.dll", EntryPoint="hciInquiry",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciInquiry(uint handle, byte inquiryLength, byte numResponses, uint lap);

        [DllImport("TestEngine.dll", EntryPoint="hciGetInquiryResults",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetInquiryResults(uint handle, uint [] lap, byte [] uap, ushort [] nap, ushort [] clockOffset, uint maxLen, out uint dataLen);

        [DllImport("TestEngine.dll", EntryPoint="hciInquiryCancel",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciInquiryCancel(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hciCreateConnection",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciCreateConnection(uint handle, uint lap, byte uap, ushort nap, ushort pktType, out ushort connectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciCreateConnectionNoInquiry",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciCreateConnectionNoInquiry(uint handle, uint lap, byte uap, ushort nap, ushort pktType, byte pageScanRepMode, byte pageScanMode, ushort clockOffset, byte allowRoleSwitch, out ushort connectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciCreateScoConnection",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciCreateScoConnection(uint handle, ushort aclConnectionHandle, ushort pktType, out ushort scoConnectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciSetupScoConnection",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSetupScoConnection(uint handle, ushort aclConnectionHandle, uint txBandwidth, uint rxBandwidth, ushort maxLatency, ushort voiceSetting, byte retransEffort, ushort pktType, out ushort scoConnectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciReadVoiceSetting",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReadVoiceSetting(uint handle, out ushort voiceSetting);

        [DllImport("TestEngine.dll", EntryPoint="hciWriteVoiceSetting",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWriteVoiceSetting(uint handle, ushort voiceSetting);

        [DllImport("TestEngine.dll", EntryPoint="hciWriteLinkPolicySettings",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWriteLinkPolicySettings(uint handle, ushort connectionHandle, ushort linkPolicySettings);
